Fix splash size on mobile

--- a/frontend/src/Pages/HomePage/HomePage.module.scss
+++ b/frontend/src/Pages/HomePage/HomePage.module.scss
@@ -1,6 +1,7 @@
 /* stylelint-disable selector-max-type */
 /* TODO: fix later */
 @import 'src/constants';
+@import 'src/mixins';
 
 .container {
   width: 100%;
@@ -24,6 +25,11 @@
   left: 0;
   top: -$navbar-height;
   z-index: -1;
+
+  @include for-mobile-only {
+    min-height: 215px;
+  }
+
 }
 
 .splash_fade {
@@ -36,6 +42,10 @@
   background: linear-gradient(
     to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0)
   );
+
+  @include for-mobile-only {
+    height: 100px;
+  }
 }
 
 .content {
